--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -24,7 +21,7 @@
             >Web<span class="text-web-logo">Studio</span></a
           >
           <ul class="navigation">
-            <li class="navigation-list active">
+            <li class="navigation-list">
               <a href="./index.html" class="navigation-link">Studio</a>
             </li>
             <li class="navigation-list">
@@ -63,8 +60,8 @@
 
       <!-- second section start -->
       <section class="second-section">
-        <div class="container container-second-section">
-          <h2 class="header-second-level hidden-header">Banking App</h2>
+        <div class="container">
+          <h2 class="header-second-level visually-hidden">Banking App</h2>
           <ul class="card-second-section">
             <li class="box-second-section">
               <h3 class="header-third-level">Strategy</h3>
@@ -100,7 +97,7 @@
 
       <!-- third section start -->
       <section class="third-section">
-        <div class="container container-third-section">
+        <div class="container">
           <h2 class="header-second-level">Our Team</h2>
           <ul class="card-team">
             <li class="third-section-list">
@@ -110,8 +107,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-third-level">Mark Guerrero</h3>
-              <p class="section-paragraph">Product Designer</p>
+              <div class="personal-data">
+                <h3 class="header-third-level">Mark Guerrero</h3>
+                <p class="section-paragraph">Product Designer</p>
+              </div>
             </li>
             <li class="third-section-list">
               <img
@@ -120,8 +119,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-third-level">Tom Ford</h3>
-              <p class="section-paragraph">Frontend Developer</p>
+              <div class="personal-data">
+                <h3 class="header-third-level">Tom Ford</h3>
+                <p class="section-paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="third-section-list">
               <img
@@ -130,8 +131,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-third-level">Camila Garcia</h3>
-              <p class="section-paragraph">Marketing</p>
+              <div class="personal-data">
+                <h3 class="header-third-level">Camila Garcia</h3>
+                <p class="section-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="third-section-list">
               <img
@@ -140,8 +143,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-third-level">Daniel Wilson</h3>
-              <p class="section-paragraph">UI Designer</p>
+              <div class="personal-data">
+                <h3 class="header-third-level">Daniel Wilson</h3>
+                <p class="section-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -149,7 +154,7 @@
 
       <!-- fourth section start -->
       <section class="fourth-section">
-        <div class="container container-fourth-section">
+        <div class="container">
           <h2 class="header-second-level">Our Portfolio</h2>
           <ul class="card-portfolio">
             <li class="fourth-section-list">
@@ -159,8 +164,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Banking App</h3>
-              <p class="section-paragraph">App</p>
+              <p class="section-paragraph">App</p></div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -169,8 +175,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Cashless Payment</h3>
-              <p class="section-paragraph">Marketing</p>
+              <p class="section-paragraph">Marketing</p></div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -179,8 +186,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Meditation App</h3>
-              <p class="section-paragraph">App</p>
+              <p class="section-paragraph">App</p></div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -189,8 +197,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Taxi Service</h3>
-              <p class="section-paragraph">Marketing</p>
+              <p class="section-paragraph">Marketing</p></div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -199,8 +208,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Screen Illustrations</h3>
-              <p class="section-paragraph">Design</p>
+              <p class="section-paragraph">Design</p></div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -209,8 +219,9 @@
                 width="360"
                 height="300"
               />
+              <div class="project-data">
               <h3 class="header-third-level">Online Courses</h3>
-              <p class="section-paragraph">Marketing</p>
+              <p class="section-paragraph">Marketing</p></div>
             </li>
           </ul>
         </div>
@@ -218,7 +229,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container container-footer">
+      <div class="container">
         <a href="./index.html" class="footer-link"
           >Web<span class="text-web-logo">Studio</span></a
         >
