--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -165,8 +168,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Banking App</h3>
-              <p class="section-paragraph">App</p></div>
+                <h3 class="header-third-level">Banking App</h3>
+                <p class="section-paragraph">App</p>
+              </div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -176,8 +180,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Cashless Payment</h3>
-              <p class="section-paragraph">Marketing</p></div>
+                <h3 class="header-third-level">Cashless Payment</h3>
+                <p class="section-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -187,8 +192,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Meditation App</h3>
-              <p class="section-paragraph">App</p></div>
+                <h3 class="header-third-level">Meditation App</h3>
+                <p class="section-paragraph">App</p>
+              </div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -198,8 +204,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Taxi Service</h3>
-              <p class="section-paragraph">Marketing</p></div>
+                <h3 class="header-third-level">Taxi Service</h3>
+                <p class="section-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -209,8 +216,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Screen Illustrations</h3>
-              <p class="section-paragraph">Design</p></div>
+                <h3 class="header-third-level">Screen Illustrations</h3>
+                <p class="section-paragraph">Design</p>
+              </div>
             </li>
             <li class="fourth-section-list">
               <img
@@ -220,8 +228,9 @@
                 height="300"
               />
               <div class="project-data">
-              <h3 class="header-third-level">Online Courses</h3>
-              <p class="section-paragraph">Marketing</p></div>
+                <h3 class="header-third-level">Online Courses</h3>
+                <p class="section-paragraph">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
