--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <header class="page-header">
       <div class="container container-nav">
@@ -40,12 +41,12 @@
         </nav>
         <address class="address">
           <ul class="card-address">
-            <li class="address-contact">
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="address-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="address-contact">
+            <li class="address-item">
               <a href="tel:+110001111111" class="address-link"
                 >+11 (000) 111-11-11</a
               >
@@ -56,11 +57,11 @@
     </header>
 
     <!-- first section start -->
-    <main class="main-tag">
+    <main class="main-part-page">
       <section class="first-section">
-        <div class="container container-first-section">
+        <div class="container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
-          <button type="button" class="button">Order Service</button>
+          <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
 
@@ -68,29 +69,29 @@
       <section class="second-section">
         <div class="container">
           <h2 class="header-second-level visually-hidden">Banking App</h2>
-          <ul class="card-second-section">
-            <li class="box-second-section">
+          <ul class="menu-second-section">
+            <li class="item-second-section">
               <h3 class="header-third-level">Strategy</h3>
               <p class="section-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="box-second-section">
+            <li class="item-second-section">
               <h3 class="header-third-level">Punctuality</h3>
               <p class="section-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="box-second-section">
+            <li class="item-second-section">
               <h3 class="header-third-level">Diligence</h3>
               <p class="section-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="box-second-section">
+            <li class="item-second-section">
               <h3 class="header-third-level">Technologies</h3>
               <p class="section-paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -105,8 +106,8 @@
       <section class="third-section">
         <div class="container">
           <h2 class="header-second-level">Our Team</h2>
-          <ul class="card-team">
-            <li class="third-section-list">
+          <ul class="menu-third-section">
+            <li class="third-section-item">
               <img
                 src="./images/mark-guerrero.jpg"
                 alt="photo Mark Guerrero"
@@ -118,7 +119,7 @@
                 <p class="section-paragraph">Product Designer</p>
               </div>
             </li>
-            <li class="third-section-list">
+            <li class="third-section-item">
               <img
                 src="./images/tom-ford.jpg"
                 alt="photo Tom Ford"
@@ -130,7 +131,7 @@
                 <p class="section-paragraph">Frontend Developer</p>
               </div>
             </li>
-            <li class="third-section-list">
+            <li class="third-section-item">
               <img
                 src="./images/camila-garcia.jpg"
                 alt="photo Camila Garcia"
@@ -142,7 +143,7 @@
                 <p class="section-paragraph">Marketing</p>
               </div>
             </li>
-            <li class="third-section-list">
+            <li class="third-section-item">
               <img
                 src="./images/daniel-wilson.jpg"
                 alt="photo Daniel Wilson"
@@ -162,8 +163,8 @@
       <section class="fourth-section">
         <div class="container">
           <h2 class="header-second-level">Our Portfolio</h2>
-          <ul class="card-portfolio">
-            <li class="fourth-section-list">
+          <ul class="menu-fourth-section">
+            <li class="fourth-section-item">
               <img
                 src="./images/banking-app.jpg"
                 alt="Banking App"
@@ -175,7 +176,7 @@
                 <p class="section-paragraph">App</p>
               </div>
             </li>
-            <li class="fourth-section-list">
+            <li class="fourth-section-item">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Cashless Payment"
@@ -187,7 +188,7 @@
                 <p class="section-paragraph">Marketing</p>
               </div>
             </li>
-            <li class="fourth-section-list">
+            <li class="fourth-section-item">
               <img
                 src="./images/meditaion-app.jpg"
                 alt="Meditation App"
@@ -199,7 +200,7 @@
                 <p class="section-paragraph">App</p>
               </div>
             </li>
-            <li class="fourth-section-list">
+            <li class="fourth-section-item">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Taxi Service"
@@ -211,7 +212,7 @@
                 <p class="section-paragraph">Marketing</p>
               </div>
             </li>
-            <li class="fourth-section-list">
+            <li class="fourth-section-item">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Screen Illustrations"
@@ -223,7 +224,7 @@
                 <p class="section-paragraph">Design</p>
               </div>
             </li>
-            <li class="fourth-section-list">
+            <li class="fourth-section-item">
               <img
                 src="./images/online-courses.jpg"
                 alt="Online Courses"
@@ -240,7 +241,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="page-footer">
       <div class="container">
         <a href="./index.html" class="footer-link"
           >Web<span class="text-web-logo">Studio</span></a
